# java-llama.cpp

./: .gitignore  CMakeLists.txt  README.md  build.sbt  pom.xml
.github/workflows/: release.yaml
docker/: README.md  manylinux-gpu.Dockerfile  manylinux.Dockerfile  sbt_publish.sh
project/: plugins.sbt
src/main/cpp/: batch_inference.cpp  batch_inference.h  jllama.cpp  jllama.h  llama_batch_inference.cpp  llama_batch_inference.h  server.hpp  utils.hpp
src/main/java/com/johnsnowlabs/nlp/llama/: InferenceParameters.java  JsonParameters.java  LlamaException.java  LlamaIterable.java  LlamaIterator.java  LlamaLoader.java  LlamaModel.java  LlamaOutput.java  LogLevel.java  ModelParameters.java  OSInfo.java  ProcessRunner.java
src/main/java/com/johnsnowlabs/nlp/llama/args/: GpuSplitMode.java  LogFormat.java  MiroStat.java  NumaStrategy.java  PoolingType.java  RopeScalingType.java  Sampler.java
src/main/java/de/kherud/llama/: LlamaLoader.java  LlamaModel.java
src/test/cpp/: test_batch.cpp
src/test/java/com/johnsnowlabs/nlp/llama/: LlamaModelBatchIT.java  LlamaModelTest.java
src/test/java/de/kherud/llama/: LlamaModelBatchIT.java  LlamaModelTest.java
src/test/java/examples/: GrammarExample.java  InfillExample.java  MainExample.java
